[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0"
rust-crypto = "0.2"
chrono = "0.4"
rsa = "0.9.6"
rand = "0.8.5"
hex = "0.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.11"
openssl = { version = "0.10", features = ["vendored"] }
minisign = "0.7.1"
